--- a/src/components/styles/index.scss
+++ b/src/components/styles/index.scss
@@ -1,5 +1,14 @@
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
-body{
+body {
+  width: 100%;
+  height: 100vh;
+
+  #app {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 
 }
+
