--- a/src/components/styles/index.scss
+++ b/src/components/styles/index.scss
@@ -3,6 +3,10 @@
 body {
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 
   #app {
     display: flex;
